hphp/test/quick/unset_badbase.php.expectf
NULL

Fatal error: Cannot unset string offsets in %s on line 13
